--- a/Style.css
+++ b/Style.css
@@ -1,10 +1,21 @@
 body{
     margin: 0;
-    background-color: gray;
+    background-color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
-p{
-    padding-left: 20px;
+.wrapper{
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+}
+
+form{
+    padding: 25px;
+    border-style: dashed;
+    border-color: green;
+    border-radius: 20px;
+    display: inline-block;
 }
 
 label{
@@ -15,5 +26,9 @@ label{
 }
 
 input[type="submit"]{
-    margin-left:134px;
+    margin-left:130px;
+}
+
+li{
+    list-style-type: none;
 }
